--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
 	<meta charset="UTF-8">
 	<title>Title</title>
 	<link rel="stylesheet" href="assets/css/main.css">
-</head>
-<body>
-	<script src="assets/js/main.js"></script>
-</body>
-</html>
+  </head>
+  <body>
+ 	<header>
+ 		<a href="/" id="logo-link">
+ 			<img src="assets/img/logo-white.png">
+ 		</a>		
+ 		<ul id="nav-menu">
+ 			<li id="nav-menu-drive">
+ 				<a href="#"></a>
+ 			</li>
+ 			<li id="nav-menu-explore">
+ 				<a href="#"></a>
+ 			</li>
+ 			<li id="nav-menu-help">
+ 				<a href="#"></a>
+ 			</li>
+ 		</ul>
+ 	</header>
+  	<script src="assets/js/main.js"></script>
+  </body>
+  </html> 
