--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
   <body>
  	<header>
  		<a href="/" id="logo-link">
+ 		<a href="#" id="logo-link">
  			<img src="assets/img/logo-white.png">
  		</a>		
  		<ul id="nav-menu">
  			<li id="nav-menu-drive">
  				<a href="#"></a>
+ 				<a href="#">Drive</a>
  			</li>
  			<li id="nav-menu-explore">
  				<a href="#"></a>
+ 				<a href="#">Explore</a>
  			</li>
  			<li id="nav-menu-help">
  				<a href="#"></a>
+ 				<a href="#">Help</a>
  			</li>
  		</ul>
  	</header>
