js, puntos extra

--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
 	</div>
 
 	<footer>
-		
+		<!--<div class="mi-piso">
+			<a href="#" id="logos">
+				<img src="assets/img/amazon.png">
+				<img src="assets/img/apple-app-Store.png">
+				<img src="assets/img/google-play.png">
+				<img src="assets/img/microsoft.png">
+			</a>	
+		</div> -->
 	</footer>
 
 	<script src="assets/js/main.js"></script>
