--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 				</li>
 			</ul>
 		</div>
-
 	</header>
 
 	<div id="boxright">
@@ -87,14 +86,30 @@
 	</div>
 
 	<footer>
-		<!--<div class="mi-piso">
-			<a href="#" id="logos">
-				<img src="assets/img/amazon.png">
-				<img src="assets/img/apple-app-Store.png">
-				<img src="assets/img/google-play.png">
-				<img src="assets/img/microsoft.png">
-			</a>	
-		</div> -->
+		<div class="container">
+			<ul>
+				<li>
+					<a href="#">
+						<img class="radius" src="assets/img/amazon.png">
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img class="radius" src="assets/img/apple.svg">
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img class="radius" src="assets/img/google-play.png">
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="assets/img/microsoft.png">
+					</a>
+				</li>
+			</ul>
+		</div>	
 	</footer>
 
 	<script src="assets/js/main.js"></script>
